# VKernel_Re_Coder

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: editor.h
engine/source/editor/source/: editor.cpp  main.cpp
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/render/: render_system.cpp  render_system.h  window_system.cpp  window_system.h
engine/source/runtime/function/render/vulkan_interface/: vulkan_api.cpp  vulkan_api.h  vulkan_struct.h  vulkan_vma.cpp
